# BaseProject

./: .gitignore  BaseProject.files  BaseProject.includes  CMakeLists.txt  LICENSE  License.txt  LicenseReference.txt  README.md
Audio/: Audio.cpp  Audio.h  AudioManager.cpp  AudioManager.h  Event.cpp  Event.h  MagicConstants.h
AudioTest/: main.cpp
CMake/: CUDA.h.cmake  CommonProject.h.cmake  Documentation.h.cmake  Embree.h.cmake  FindTINYXML2.cmake  FindTinyXML2.cmake  Git.h.cmake  LibPNG.h.cmake  Linux.h.cmake  Math.h.cmake  OpenGL.h.cmake  PostBuild.h.cmake  TinyXML2.h.cmake  Windows.h.cmake
CollisionDetection/: CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.h  ObliqueCircularCone.cpp  ObliqueCircularCone.h  Plane.h
GameClient/: Color.fx  Game.cpp  Game.h  GameState.h  GameStateCommunicating.cpp  GameStateCommunicating.h  GameStateConnecting.cpp  GameStateConnecting.h  LocalTank.h  (+14 more)
Graphics/: AnimatedSprite.cpp  AnimatedSprite.h  BaseCamera3D.cpp  BaseCamera3D.h  CMakeLists.txt  Camera2D.cpp  Camera2D.h  Camera3D.cpp  Camera3D.h  Color.cpp  Color.h  ColorMap.cpp  ColorMap.h  ElementsDescription.cpp  ElementsDescription.h  FacesDescription.cpp  FacesDescription.h  GraphicsManager.cpp  GraphicsManager.h  Helper.cpp  Helper.h  IRenderable.h  ImageManager.cpp  ImageManager.h  MagicConstants.cpp  MagicConstants.h  PinholeCamera.cpp  PinholeCamera.h  RenderGroup.cpp  RenderGroup.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  TextureHeader.h  VerticesDescription.cpp  VerticesDescription.h  Viewport.cpp  Viewport.h
Graphics/GUI/: GUIManager.cpp  GUIManager.h  SubGUI.cpp  SubGUI.h
Graphics3D/: CMakeLists.txt  Color.cpp  Color.h  ColorMaterial.cpp  ColorMaterial.h  DiffTexMaterial.cpp  DiffTexMaterial.h  DirectionalLight.cpp  DirectionalLight.h  Font.cpp  Font.h  FontManager.cpp  FontManager.h  FrameStatistics.cpp  FrameStatistics.h  GraphicsConfigurationLoader.cpp  GraphicsConfigurationLoader.h  GraphicsManager.cpp  GraphicsManager.h  IRenderable.h  Light.cpp  Light.h  LightTexMaterial.cpp  LightTexMaterial.h  LightTexShader.cpp  LightTexShader.h  MagicConstants.cpp  MagicConstants.h  Material.cpp  Material.h  PointLight.cpp  PointLight.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h  Shader.cpp  Shader.h  SpotLight.cpp  SpotLight.h  (+13 more)
GraphicsTest/: CMakeLists.txt  MyApp.cpp  MyApp.h  main.cpp
Math/: BezierCurve.h  CMakeLists.txt  KernelsInterpolationsWeightings.cpp  KernelsInterpolationsWeightings.h  LinearSolver.cpp  LinearSolver.h  MathCore.h  MathHelper.cpp  MathHelper.h  Matrix2x2.cpp  Matrix2x2.h  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  Polybezier.cpp  Polybezier.h  Quaternion.cpp  Quaternion.h  Statistics.cpp  Statistics.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
MathTest/: CMakeLists.txt  main.cpp
Patterns/: CMakeLists.txt  IDeserializer.h  ISerializable.h  ISerializer.h  Patterns.cpp  Patterns.h  Singleton.h  Subject.cpp  Subject.h
Platform/: Application.cpp  Application.h  ApplicationTimer.cpp  ApplicationTimer.h  CMakeLists.txt  DataTypes.cpp  DataTypes.h  FrameRateCalculator.cpp  FrameRateCalculator.h  IWindowObserver.h  MagicConstants.cpp  MagicConstants.h  ParametersManager.cpp  ParametersManager.h  Platform.h  TimePeriod.cpp  TimePeriod.h  Window.cpp  Window.h
Platform/FailureHandling/: AudioException.cpp  AudioException.h  ClosedConnectionException.cpp  ClosedConnectionException.h  ConnectionCreationException.cpp  ConnectionCreationException.h  DirectoryAccessException.cpp  DirectoryAccessException.h  Exception.cpp  Exception.h  FailureHandling.cpp  FailureHandling.cu  FailureHandling.h  FileAccessException.cpp  FileAccessException.h  FileCorruptionException.cpp  FileCorruptionException.h  FileException.cpp  FileException.h  FileVersionException.cpp  FileVersionException.h  GraphicsException.cpp  GraphicsException.h  HostNameResolutionException.cpp  HostNameResolutionException.h  InputException.cpp  InputException.h  InvalidSocketException.cpp  InvalidSocketException.h  NetworkException.cpp  NetworkException.h  NetworkExceptionFactory.cpp  NetworkExceptionFactory.h  SocketBindException.cpp  SocketBindException.h  WindowException.cpp  WindowException.h
Platform/Input/: GameController.cpp  GameController.h  InputManager.cpp  InputManager.h  Keyboard.cpp  Keyboard.h  KeyboardMapping.h  MagicConstants.h  Mouse.cpp  Mouse.h  SomeController.cpp  SomeController.h  TextInput.cpp  TextInput.h  Xbox360Controller.cpp  Xbox360Controller.h
Platform/Logging/: ConsoleLogOutput.cpp  ConsoleLogOutput.h  FileLogOutput.cpp  FileLogOutput.h  LogManager.cpp  LogManager.h  LogOutput.cpp  LogOutput.h
Platform/Multithreading/: Manager.cpp  Manager.h  Task.cpp  Task.h
Platform/Profiling/: CUDAProfiler.cu  CUDAProfiler.h  FrameRateCalculator.cpp  FrameRateCalculator.h  Profiler.cpp  Profiler.h  TimeMeasurements.cpp  TimeMeasurements.h
Platform/ResourceManagement/: Bucket.cpp  Bucket.h  MagicConstants.h  MemoryManager.cpp  MemoryManager.h  MemoryPool.cpp  MemoryPool.h  Resource.h  UserResource.h  VolatileResource.h
Platform/Storage/: Directory.cpp  Directory.h  File.cpp  File.h  Path.cpp  Path.h  Storage.h
Platform/Timing/: ApplicationTimer.cpp  ApplicationTimer.h  TimePeriod.cpp  TimePeriod.h
Platform/Utilities/: Array.h  Conversions.cpp  Conversions.h  HelperFunctions.cpp  HelperFunctions.h  Licenser.cpp  ParametersManager.cpp  ParametersManager.h  PlyFile.cpp  PlyFile.h  RandomManager.cpp  RandomManager.h  RectanglePacker.cpp  RectanglePacker.h  RegularExpression.cpp  RegularExpression.h  SVGLoader.cpp  SVGLoader.h  Size2.h
PlatformTest/: CMakeLists.txt  main.cpp
PlatformTest/Data/: Window.cfg
Utilities/: CMakeLists.txt  Conversions.cpp  Conversions.h  HelperFunctions.cpp  HelperFunctions.h  Licenser.cpp  Licenser.h  MagicConstants.h  PlyFile.cpp  PlyFile.h  RandomManager.cpp  RandomManager.h  RegularExpression.cpp  SVGLoader.cpp
Utilities/Profiling/: CUDAProfiler.cu  CUDAProfiler.h  Profiler.cpp  Profiler.h  TimeMeasurements.cpp  TimeMeasurements.h
UtilitiesTest/: CMakeLists.txt  main.cpp
(+106 files in other folders)
